allow value-class payloads in Kotlin
refactor SPI with DotName and Payload abstractions